# open-bike-computer

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSES.md  OFFLINE_MAPS.md  PRIVACY_POLICY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WAVESHARE_HARDWARE.md
OSM_Extract/: README.md  docker-compose.yml
backend/: Dockerfile  README.md  compose.coolify.yml  docker-compose.yml  pyproject.toml
backend/config/: source-regions.json
backend/map_platform/: __init__.py  admin_inventory.py  api.py  cli.py  downloads.py  geofabrik_sources.py  geometry.py  installations.py  jobs.py  limits.py  manifest.py  map_stream.py  models.py  pipeline.py  request_limits.py  reuse.py  source_cache.py  sources.py  worker.py
backend/tests/: test_api.py  test_cli.py  test_downloads.py  test_geometry.py  test_installations.py  test_manifest.py  test_map_stream.py  test_pipeline_artifacts.py  test_preview.py  test_request_limits.py  test_reuse.py  test_source_cache.py  test_sources_jobs.py  test_worker.py
backend/tests/fixtures/: map_stream_v1_golden.txt
backend/tools/: generate_map_stream_golden.py
docs/: ble-protocol.md  cycling-sensor-settings-implementation-plan.md  device-ownership-test-vectors.json  iphone-workout-live-activity-implementation-plan.md  map-pack-reuse-and-admin-dashboard-implementation-plan.md  map-stream-format-v1.md  map-stream-rollout-runbook.md  streaming-map-installation-implementation-plan.md  watchos-workout-companion-implementation-plan.md  watchos-workout-companion-validation.md  waveshare-amoled-206-audio-bringup.md  (+1 more)
esp32/: .gitignore  (+6 more)
(+266 files in other folders)
